--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,4 +3,4 @@ age = input("How old are you? ")
 city = input("Where do you live? ")
 
 # Output results
-print("Hello " + name + ", Abed " + age + " 17 " + city + "oakville")
+print("Hello " + Abed + ", you are " + 17 + " years old and live in " + Oakville + ".")
